--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@radix-ui/react-slot": "1.1.1",
     "@radix-ui/react-switch": "1.1.2",
     "@radix-ui/react-tabs": "1.1.2",
-    "@radix-ui/react-toast": "1.2.4",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
@@ -51,7 +51,7 @@
     "input-otp": "1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.1.7",
     "next-themes": "latest",
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
