--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "framer-motion": "latest",
     "input-otp": "1.4.1",
     "js-cookie": "^3.0.5",
+    "laravel-echo": "^2.1.7",
     "lucide-react": "^0.454.0",
     "next": "^14.1.4",
     "next-themes": "latest",
+    "pusher-js": "^8.4.0",
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
